--- a/contact us.html
+++ b/contact us.html
@@ -3,108 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Form</title>
+  <title>Contact Us - Design Nature Studio</title>
+  <link rel="stylesheet" href="./home page.css">
+  <link rel="shortcut icon" href="./images/basic img/fevicon.jpeg" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <style>
-    body {
-      background-color: #ffffff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      flex-direction: column;
-    }
-    .heading {
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    .contact-box {
-      display: flex;
-      background: rgb(209, 209, 209);
-      border-radius: 10px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      width: 80%;
-      max-width: 900px;
-      padding: 20px;
-      gap: 20px;
-    }
-    .form-container {
-      width: 60%;
-      padding: 30px;
-      box-sizing: border-box;
-    }
-    .image-container {
-      width: 40%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 30px;
-    }
-    .image-container img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      margin: 20px;
-    }
-    .input-field {
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0 15px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      resize: none;
-      display: block;
-    }
-    label {
-      display: block;
-      margin: 10px 0 3px;
-      font-weight: bold;
-    }
-    label span {
-      color: red;
-    }
-    textarea.input-field {
-      min-height: 100px;
-      max-height: 200px;
-    }
-    .submit-btn {
-      width: 100%;
-      padding: 10px;
-      background: black;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    .status-message {
-      margin-top: 10px;
-      font-weight: bold;
-      display: none;
-    }
-    .success {
-      color: green;
-    }
-    .error {
-      color: red;
-    }
-    @media (max-width: 768px) {
-      .contact-box {
-        flex-direction: column;
-        width: 90%;
-      }
-      .image-container {
-        width: 100%;
-        padding: 10px 0;
-      }
-    }
+    body { background-color: #ffffff; font-family: Arial, sans-serif; margin: 0; flex-direction: column; }
+    .heading { font-size: 24px; font-weight: bold; margin: 100px 0 20px; text-align: center; }
+    .contact-box { display: flex; background: rgb(209, 209, 209); border-radius: 10px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); overflow: hidden; width: 80%; max-width: 900px; padding: 20px; gap: 20px; margin: 0 auto 50px; }
+    .form-container { width: 60%; padding: 30px; box-sizing: border-box; }
+    .image-container { width: 40%; display: flex; justify-content: center; align-items: center; padding: 30px; }
+    .image-container img { max-width: 100%; height: auto; border-radius: 10px; margin: 20px; }
+    .input-field { width: 100%; padding: 10px; margin: 5px 0 15px; border-radius: 6px; border: 1px solid #ccc; resize: none; display: block; }
+    label { display: block; margin: 10px 0 3px; font-weight: bold; }
+    label span { color: red; }
+    textarea.input-field { min-height: 100px; max-height: 200px; }
+    .submit-btn { width: 100%; padding: 10px; background: #0b8457; color: white; border: none; border-radius: 6px; cursor: pointer; margin-top: 10px; }
+    .status-message { margin-top: 10px; font-weight: bold; display: none; }
+    .success { color: green; }
+    .error { color: red; }
+    @media (max-width: 768px) { .contact-box { flex-direction: column; width: 90%; } .image-container { width: 100%; padding: 10px 0; } }
   </style>
 </head>
 <body>
+
+  <!-- Navbar -->
+  <nav class="navbar">
+    <a href="home page.html" class="logo"><img src="./images/basic img/logo.png" alt="Logo"></a>
+    <nav>
+      <ul>
+        <li><a href="home page.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="contact.html" class="active">Contact Us</a></li>
+        <li><a href="career.html">Career</a></li>
+        <li><a href="adminlogin.html">Admin</a></li>
+      </ul>
+    </nav>
+  </nav>
+
   <div class="heading">Get Free Consultation</div>
+
   <div class="contact-box">
     <div class="form-container">
       <h2>Get in Touch</h2>
@@ -112,7 +52,6 @@
         <a href="mailto:sakshidhas24@gmail.com">sakshidhas24@gmail.com</a>
       </p>
 
-      <!-- ✅ Updated Form -->
       <form id="contactForm">
         <label for="name">Your Name <span>*</span></label>
         <input type="text" name="name" id="name" class="input-field" required>
@@ -123,10 +62,10 @@
         <label for="message">Your Message <span>*</span></label>
         <textarea name="message" id="message" class="input-field" required></textarea>
 
-        <button type="submit" class="submit-btn">Send Inquiry</button>
+        <!-- Payment Button -->
+        <button type="button" id="payBtn" class="submit-btn">Pay ₹1 Consultation & Submit</button>
       </form>
 
-      <!-- ✅ Feedback Messages -->
       <p class="status-message success" id="successMessage">Thank you! Your message has been sent.</p>
       <p class="status-message error" id="errorMessage">Oops! Something went wrong.</p>
     </div>
@@ -136,44 +75,80 @@
     </div>
   </div>
 
-  <!-- ✅ JavaScript to Send Data to Spring Boot -->
   <script>
     const form = document.getElementById("contactForm");
     const successMessage = document.getElementById("successMessage");
     const errorMessage = document.getElementById("errorMessage");
 
-    form.addEventListener("submit", async function (e) {
-      e.preventDefault();
+    document.getElementById("payBtn").addEventListener("click", async function () {
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const message = document.getElementById("message").value.trim();
 
-      const name = document.getElementById("name").value;
-      const email = document.getElementById("email").value;
-      const message = document.getElementById("message").value;
+      if (!name || !email || !message) {
+        alert("Please fill all fields before payment.");
+        return;
+      }
 
       try {
-        const response = await fetch("http://localhost:8080/api/contact", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ name, email, message })
-        });
+        // 1️⃣ Create order from backend
+        console.log("Creating order...");
+        const response = await fetch("http://localhost:8080/api/payment/create-order", { method: "POST" });
+        const order = await response.json();
+        console.log("Order response:", order);
 
-        const result = await response.text();
-
-        if (response.ok) {
-          successMessage.style.display = "block";
-          errorMessage.style.display = "none";
-          form.reset();
-        } else {
-          successMessage.style.display = "none";
-          errorMessage.style.display = "block";
+        if (order.error) {
+          alert("Error creating order: " + order.error);
+          return;
         }
-      } catch (error) {
-        successMessage.style.display = "none";
-        errorMessage.style.display = "block";
-        console.error("Error:", error);
+
+        // 2️⃣ Razorpay Checkout
+        var options = {
+          key: "rzp_test_----------------------", // 🔑 Replace with your Razorpay Test Key
+          amount: order.amount,
+          currency: order.currency,
+          name: "Design Nature Studio",
+          description: "Consultation Payment",
+          order_id: order.id,
+          handler: async function (paymentResult) {
+            console.log("Payment success:", paymentResult);
+            alert("✅ Payment Successful! Payment ID: " + paymentResult.razorpay_payment_id);
+
+            // 3️⃣ Save contact form after payment success
+            try {
+              const saveResponse = await fetch("http://localhost:8080/api/contact", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ name, email, message })
+              });
+
+              if (saveResponse.ok) {
+                successMessage.style.display = "block";
+                errorMessage.style.display = "none";
+                form.reset();
+              } else {
+                console.error("Failed to save contact form, status:", saveResponse.status);
+                throw new Error("Failed to save contact form");
+              }
+            } catch (err) {
+              console.error(err);
+              successMessage.style.display = "none";
+              errorMessage.style.display = "block";
+            }
+          },
+          prefill: { name, email },
+          theme: { color: "#0b8457" }
+        };
+
+        var rzp = new Razorpay(options);
+        rzp.open();
+
+      } catch (err) {
+        console.error("Error in payment flow:", err);
+        alert("Something went wrong. Check console.");
       }
     });
   </script>
+
 </body>
 </html>
