--- a/adminlogin.html
+++ b/adminlogin.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Login - Design Nature Studio</title>
+  <link rel="stylesheet" href="./home page.css">
+  <link rel="shortcut icon" href="./images/basic img/fevicon.jpeg" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f3f3f3;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      margin: 0;
     }
+
     .login-box {
       background-color: #ffffff;
       padding: 40px;
@@ -21,6 +25,7 @@
       box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
       width: 100%;
       max-width: 400px;
+      margin-top: 120px; /* ✅ pushed down because of navbar */
     }
     .login-box h2 {
       text-align: center;
@@ -67,6 +72,22 @@
 </head>
 <body>
 
+  <!-- ✅ Navbar (same as other pages) -->
+  <nav class="navbar">
+    <a href="home page.html" class="logo"><img src="./images/basic img/logo.png" alt="Logo"></a>
+    <nav>
+      <ul>
+        <li><a href="home page.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="career.html">Career</a></li>
+        <li><a href="adminlogin.html" class="active">Admin</a></li>
+      </ul>
+    </nav>
+  </nav>
+
+  <!-- ✅ Login Box -->
   <div class="login-box">
     <h2>Admin Login</h2>
     <form id="adminLoginForm">
