--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(162, 239, 126, 0.5); /* Make navbar transparent */
+  background-color: grey ; /* Make navbar transparent */
   /* Optional: Add a subtle backdrop filter for better visibility */
   /* backdrop-filter: blur(5px); */
 }
