--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Design Nature Studio</title>
+  <link rel="stylesheet" href="./home page.css">
+  <link rel="shortcut icon" href="./images/basic img/fevicon.jpeg" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -15,7 +18,7 @@
 
     .container {
       max-width: 900px;
-      margin: 50px auto;
+      margin: 120px auto 50px; /* shifted down due to navbar */
       background: #ffffff;
       padding: 40px;
       border-radius: 12px;
@@ -51,6 +54,23 @@
   </style>
 </head>
 <body>
+
+  <!-- ✅ Navbar (same as career.html) -->
+  <nav class="navbar">
+    <a href="home page.html" class="logo"><img src="./images/basic img/logo.png" alt="Logo"></a>
+    <nav>
+      <ul>
+        <li><a href="home page.html">Home</a></li>
+        <li><a href="about.html" class="active">About Us</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="career.html">Career</a></li>
+        <li><a href="adminlogin.html">Admin</a></li>
+      </ul>
+    </nav>
+  </nav>
+
+  <!-- ✅ Content -->
   <div class="container">
     <h1>About Us</h1>
     
@@ -84,5 +104,6 @@
       <br>— The Design Nature Studio Team
     </p>
   </div>
+
 </body>
 </html>
